; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_draw_bmp.c_align_bbox_for_swscale.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_draw_bmp.c_align_bbox_for_swscale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_image = type { i32, i32 }
%struct.mp_rect = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_image*, %struct.mp_rect*)* @align_bbox_for_swscale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @align_bbox_for_swscale(%struct.mp_image* %0, %struct.mp_rect* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mp_image*, align 8
  %5 = alloca %struct.mp_rect*, align 8
  %6 = alloca %struct.mp_rect, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mp_image* %0, %struct.mp_image** %4, align 8
  store %struct.mp_rect* %1, %struct.mp_rect** %5, align 8
  %9 = getelementptr inbounds %struct.mp_rect, %struct.mp_rect* %6, i32 0, i32 0
  store i32 0, i32* %9, align 4
  %10 = getelementptr inbounds %struct.mp_rect, %struct.mp_rect* %6, i32 0, i32 1
  store i32 0, i32* %10, align 4
  %11 = getelementptr inbounds %struct.mp_rect, %struct.mp_rect* %6, i32 0, i32 2
  %12 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %13 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %11, align 4
  %15 = getelementptr inbounds %struct.mp_rect, %struct.mp_rect* %6, i32 0, i32 3
  %16 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %17 = getelementptr inbounds %struct.mp_image, %struct.mp_image* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %15, align 4
  %19 = load %struct.mp_rect*, %struct.mp_rect** %5, align 8
  %20 = call i32 @mp_rect_intersection(%struct.mp_rect* %19, %struct.mp_rect* %6)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

23:                                               ; preds = %2
  %24 = load %struct.mp_image*, %struct.mp_image** %4, align 8
  %25 = call i32 @get_swscale_alignment(%struct.mp_image* %24, i32* %7, i32* %8)
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load %struct.mp_rect*, %struct.mp_rect** %5, align 8
  %29 = call i32 @align_bbox(i32 %26, i32 %27, %struct.mp_rect* %28)
  %30 = load %struct.mp_rect*, %struct.mp_rect** %5, align 8
  %31 = call i32 @mp_rect_intersection(%struct.mp_rect* %30, %struct.mp_rect* %6)
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %23, %22
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @mp_rect_intersection(%struct.mp_rect*, %struct.mp_rect*) #1

declare dso_local i32 @get_swscale_alignment(%struct.mp_image*, i32*, i32*) #1

declare dso_local i32 @align_bbox(i32, i32, %struct.mp_rect*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
